# README-swagger.yaml
@@ -268,6 +268,28 @@ components:
         token:
           type: string
 
+    HorseCreate:
+      type: object
+      required: [name, discipline, daily_limit]
+      properties:
+        name:
+          type: string
+        discipline:
+          type: string
+        daily_limit:
+          type: integer
+
+    TrainerCreate:
+      type: object
+      required: [name, surname]
+      properties:
+        name:
+          type: string
+        surname:
+          type: string
+        specialization:
+          type: string
+
     Horse:
       type: object
       properties:
@@ -343,6 +365,63 @@ components:
 
     JoinTraining:
       type: object
+      properties: {}
+        
+    PaginatedTrainings:
+      type: object
+      properties:
+        items:
+          type: array
+          items:
+            $ref: '#/components/schemas/Training'
+        total:
+          type: integer
+        page:
+          type: integer
+        size:
+          type: integer
+        pages:
+          type: integer
+
+    TrainingParticipant:
+      type: object
+      properties:
+        id:
+          type: integer
+        training_id:
+          type: integer
+        user_id:
+          type: integertring
+          format: date-time
+
+    TrainingCreate:
+      type: object
+      required: [horse_id, trainer_id, training_type_id, date]
+      properties:
+        horse_id:
+          type: integer
+        trainer_id:
+          type: integer
+        training_type_id:
+          type: integer
+        date:
+          type: string
+          format: date-time
+
+    JoinTraining:
+      type: object
+      properties: {}
+        
+
+    TrainingParticipant:
+      type: object
+      properties:
+        id:
+          type: integer
+        training_id:
+          type: integer
+        user_id:
+          type: integerject
       properties: {}
         
 
